<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/correct"
            android:adjustViewBounds="true"
            android:layout_margin="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/fragment_img_title" />


        <TextView
            android:id="@+id/text_result"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/fragment_game_won_text"
            android:layout_margin="30dp"
            android:textColor="@color/textColorSuccess"
            android:fontFamily="@font/harmattan"
            android:textSize="50sp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_title"
            app:layout_constraintBottom_toTopOf="@id/button_result"
            />

        <Button
            android:id="@+id/button_result"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/fragment_game_won_button"
            android:background="@android:color/transparent"
            android:layout_margin="12dp"
            android:textColor="@color/buttonNext"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
