<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/DefaultAppStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="196dp"
        android:layout_height="196dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/about_image"

        app:civ_border_color="#494949"
        app:civ_border_width="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/harmattan"
        android:text="@string/fragment_about_text_title"
        android:textAlignment="center"
        android:textColor="@color/textColorDefault"
        android:textSize="30sp"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_image" />

    <TextView
        android:id="@+id/text_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="@font/harmattan"
        android:text="@string/fragment_about_text_description"
        android:textAlignment="center"
        android:textColor="@color/textColorDefault"
        android:textSize="18sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_title" />

    <ImageView
        android:id="@+id/img_git"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_github"
        android:contentDescription="@string/fragment_img_title"

        app:layout_constraintEnd_toStartOf="@id/button_git"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_description"
        app:layout_constraintBottom_toBottomOf="parent"

        />

    <Button
        android:id="@+id/button_git"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_about_git"
        android:textAllCaps="false"
        android:background="@android:color/transparent"
        android:fontFamily="@font/harmattan"
        android:textSize="20sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/img_git"
        app:layout_constraintTop_toBottomOf="@id/text_description"
        app:layout_constraintBottom_toBottomOf="parent"
        />


    <ImageView
        android:id="@+id/img_background"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/ic_github"
        android:alpha=".05"
        android:scaleType="fitCenter"
        android:contentDescription="@string/fragment_img_title"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_description"
        />

</androidx.constraintlayout.widget.ConstraintLayout>